--- a/ontology/Dockerfile
+++ b/ontology/Dockerfile
@@ -22,12 +22,14 @@ RUN pip install gunicorn pandas
 
 #------------------------------------------------------------------------------
 # Install repository python dependencies
-WORKDIR /usr/local/sostrades/sostrades-ontology
-RUN mkdir petsc 
-RUN cd petsc & git clone -b release https://gitlab.com/petsc/petsc 
-RUN cd petsc & ls -l
+
+RUN git clone -b release https://gitlab.com/petsc/petsc 
+WORKDIR cd /usr/local/sostrades/petsc  
+RUN ls -l
 RUN ./configure --download-mpich --download-fblaslapack 
 RUN make all check
+
+WORKDIR /usr/local/sostrades/sostrades-ontology
 RUN pip install -r requirements.txt
 
 #------------------------------------------------------------------------------
